| Summary: | ASTERISK-24562: app_voicemail: Cannot set fromstring on a per-mailbox basis | ||
| Reporter: | Mark Scholten (marks-) | Labels: | |
| Date Opened: | 2014-11-26 14:12:18.000-0600 | Date Closed: | 2017-03-09 11:49:01.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_voicemail Documentation |
| Versions: | 11.11.0 13.0.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Asterisk installed from source. Debian 7, 64bit. | Attachments: | |
| Description: | Setting some options (in voicemail.conf) can be set under [general], like:
serveremail fromstring emailsubject emailbody The following list can also be set per mailbox: servermail emailsubject emailbody It would be nice if also "fromstring" could also be set on a per mailbox base. | ||
| Comments: | By: Rusty Newton (rnewton) 2014-11-26 15:17:53.187-0600 Well, without a patch this is more of a documentation issue and likely not a bug. From a documentation perspective - voicemail.conf says {noformat} ; NOTE: All options can be expressed globally in the general section, and ; overridden in the per-mailbox settings, unless listed otherwise. {noformat} The documentation for {{fromstring}} says {noformat} ; Change the From: string ;fromstring=The Asterisk PBX {noformat} So, if this is determined to not be a bug we should at least fix the documentation to say that this option cannot be used per-mailbox. By: Friendly Automation (friendly-automation) 2017-03-09 11:49:02.161-0600 Change 5141 merged by Joshua Colp: app_voicemail: Cannot set fromstring on a per-mailbox basis [https://gerrit.asterisk.org/5141|https://gerrit.asterisk.org/5141] By: Friendly Automation (friendly-automation) 2017-03-09 14:07:58.760-0600 Change 5142 merged by Joshua Colp: app_voicemail: Cannot set fromstring on a per-mailbox basis [https://gerrit.asterisk.org/5142|https://gerrit.asterisk.org/5142] By: Friendly Automation (friendly-automation) 2017-03-09 14:08:30.042-0600 Change 5143 merged by Joshua Colp: app_voicemail: Cannot set fromstring on a per-mailbox basis [https://gerrit.asterisk.org/5143|https://gerrit.asterisk.org/5143] | ||